update index html

--- a/index.html
+++ b/index.html
@@ -12,19 +12,29 @@
     <title>Photo</title>
 </head>
 <body>
+    <!-- <div class="test-container">
+        <div class="flex-container">
+            <div class="flex-element">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, eveniet odio porro provident quod itaque eaque perferendis vitae tenetur repellat voluptate corrupti rerum obcaecati labore in commodi pariatur consequuntur quo.</div>
+            <div class="flex-element">Ab rem, molestias cumque mollitia tempore similique earum optio atque corporis ut incidunt, adipisci cupiditate. Aperiam architecto aut, excepturi voluptate dolores ut ducimus unde modi nihil consectetur facilis temporibus eum?</div>
+            <div class="flex-element">Aliquid, hic velit nobis impedit sit harum eligendi itaque voluptatibus excepturi debitis dolorum similique accusamus voluptates incidunt repellat quia dolor facere! Velit beatae vitae aliquam, autem voluptate itaque libero amet.</div>
+            <div class="flex-element">Tempore aliquid obcaecati illo nesciunt eveniet, magnam consequatur temporibus corrupti odit dignissimos dicta placeat esse fuga veritatis necessitatibus minus commodi perferendis quibusdam. Quos ratione fuga expedita nam beatae, odio voluptatum.</div>
+            <div class="flex-element">Aliquam inventore sint nihil facilis commodi quod ab dolores, recusandae dolorem porro ducimus minus dolore ut modi veniam corporis. Esse magni rem ipsum maxime eius eaque! Excepturi nam culpa exercitationem!</div>
+            <div class="flex-element">Culpa, debitis? Ea quo soluta enim quod corrupti tenetur ipsa eligendi. Adipisci aperiam magnam sequi qui id porro, earum ullam officiis veritatis odit eos rem doloremque inventore tenetur, mollitia incidunt.</div>
+        </div>
+    </div> -->
     <!-- header -->
     <header class="page-header">
-            <nav class="container">
+            <nav class="container main-nav">
                 <a href="./index.html" class="logo"><img src="./images/logo.svg" alt="Логотип компании">photo</a>
                 <ul class="site-nav list">
-                    <li><a href="" class="link current">Features</a></li>
-                    <li><a href="" class="link">Pricing</a></li>
-                    <li><a href="./community.html" class="link">Community</a></li>
-                    <li><a href="" class="link">Support</a></li>
+                    <li class="item"><a href="" class="link current">Features</a></li>
+                    <li class="item"><a href="" class="link">Pricing</a></li>
+                    <li class="item"><a href="./community.html" class="link">Community</a></li>
+                    <li class="item"><a href="" class="link">Support</a></li>
                 </ul>
                 <ul class="auth-nav list">
-                    <li><a href="" class="button secondary">Log in</a></li>
-                    <li><a href="" class="button primary">Register</a></li>
+                    <li class="item"><a href="" class="button secondary">Log in</a></li>
+                    <li class="item"><a href="" class="button primary">Register</a></li>
                 </ul>
             </nav>
     </header>
@@ -38,22 +48,22 @@
             <div class="container">
                 <h2 class="section-title centered">Snap photos and share like<br>never before</h2>
                 <ul class="feature-list list">
-                    <li>
+                    <li class="item">
                         <h3 class="title">Sed ut perspiciatis</h3>
                         <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.</p>
                         <a href="" class="button secondary">Learn more</a>
                     </li>
-                    <li>
+                    <li class="item">
                         <h3 class="title">Lorem ipsum dolor</h3>
                         <p>Amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi.</p>
                         <a href="" class="button secondary">Learn more</a>
                     </li>
-                    <li>
+                    <li class="item">
                         <h3 class="title">Nemo enim ipsam</h3>
                         <p>Consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam.</p>
                         <a href="" class="button secondary">Learn more</a>
                     </li>
-                    <li>
+                    <li class="item">
                         <h3 class="title">Tempor incididunt</h3>
                         <p>Eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora.</p>
                         <a href="" class="button secondary">Learn more</a>
@@ -67,13 +77,17 @@
                 <ul class="work-list list">
                     <li class="item">
                         <img src="./images/Rectangle.svg" alt="Зимний Сад" width="750">
-                        <h3 class="title">Sed ut perspiciatis unde omnis</h3>
-                        <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem.</p>
+                        <div class="content">
+                            <h3 class="title">Sed ut perspiciatis unde omnis</h3>
+                            <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem.</p>
+                        </div>
                     </li>
                     <li class="item">
                         <img src="./images/Rectangle.svg" alt="Поле" width="750">
-                        <h3 class="title">Sed ut perspiciatis unde omnis</h3>
-                        <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem.</p>
+                        <div class="content">
+                            <h3 class="title">Sed ut perspiciatis unde omnis</h3>
+                            <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem.</p>
+                        </div>
                     </li>
                 </ul>
             </div>
@@ -81,8 +95,8 @@
         <section class="section">
            <div class="container">
                 <h2 class="section-title centered">You’re in good company</h2>
-                <p class="section-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
-                <ul class="list">
+                <p class="section-description centered">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+                <ul class="client-list list">
                     <li><a href=""><img src="./images/icon.svg" alt="Логотип компании"></a></li>
                     <li><a href=""><img src="./images/icon.svg" alt="Логотип компании"></a></li>
                     <li><a href=""><img src="./images/icon.svg" alt="Логотип компании"></a></li>
