update index html

--- a/index.html
+++ b/index.html
@@ -97,14 +97,14 @@
                 <h2 class="section-title centered">You’re in good company</h2>
                 <p class="section-description centered">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
                 <ul class="client-list list">
-                    <li><a href=""><img src="./images/icon.svg" alt="Логотип компании"></a></li>
-                    <li><a href=""><img src="./images/icon.svg" alt="Логотип компании"></a></li>
-                    <li><a href=""><img src="./images/icon.svg" alt="Логотип компании"></a></li>
-                    <li><a href=""><img src="./images/icon.svg" alt="Логотип компании"></a></li>
-                    <li><a href=""><img src="./images/icon.svg" alt="Логотип компании"></a></li>
-                    <li><a href=""><img src="./images/icon.svg" alt="Логотип компании"></a></li>
-                    <li><a href=""><img src="./images/icon.svg" alt="Логотип компании"></a></li>
-                    <li><a href=""><img src="./images/icon.svg" alt="Логотип компании"></a></li>
+                    <li><a href=""><img src="./images/icons.svg" alt="Логотип компании"></a></li>
+                    <li><a href=""><img src="./images/icons.svg" alt="Логотип компании"></a></li>
+                    <li><a href=""><img src="./images/icons.svg" alt="Логотип компании"></a></li>
+                    <li><a href=""><img src="./images/icons.svg" alt="Логотип компании"></a></li>
+                    <li><a href=""><img src="./images/icons.svg" alt="Логотип компании"></a></li>
+                    <li><a href=""><img src="./images/icons.svg" alt="Логотип компании"></a></li>
+                    <li><a href=""><img src="./images/icons.svg" alt="Логотип компании"></a></li>
+                    <li><a href=""><img src="./images/icons.svg" alt="Логотип компании"></a></li>
                 </ul>
            </div>
         </section>
@@ -206,5 +206,65 @@
             </li>
             <div class="link"></div>
     </ul>
+    <ul>
+        <li>
+            <button class="button">
+                <svg class="button-icon">
+                    <use href="./images/symbol-defs.svg#icon-antenna" widht="60" height="60"></use>
+                </svg>
+            </button>
+        </li>
+        <li>
+            <button class="button">
+                <svg class="button-icon">
+                    <use href="./images/symbol-defs.svg#icon-astronaut" widht="60" height="60"></use>
+                </svg>
+            </button>
+        </li>
+    </ul>
+    <ul class="social">
+        <li class="social-item">
+            <a class="social-link" href="">
+                <svg class="social-icon" width="16" height="16">
+                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+            </a>
+        </li>
+        <li class="social-item">
+            <a class="social-link" href="">
+                <svg class="social-icon" width="16" height="16">
+                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+            </a>
+        </li>
+        <li class="social-item">
+            <a class="social-link" href="">
+                <svg class="social-icon" width="16" height="16">
+                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+            </a>
+        </li>
+        <li class="social-item">
+            <a class="social-link" href="">
+                <svg class="social-icon" width="16" height="16">
+                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+            </a>
+        </li>
+    </ul>
+
+    <!-- <div class="circle">
+        <svg width="16" height="16">
+            <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+        </svg>
+    </div> -->
+
+    <div class="circle">
+        <svg width="16" height="16">
+            <use href="./images/symbol-defs.svg#icon-facebook"></use>
+        </svg>
+    </div>
+
+   
 </body>
 </html>
